--- a/intranet/htdocs/intranet-tmpl/temas/default/includes/bootstrap.css
+++ b/intranet/htdocs/intranet-tmpl/temas/default/includes/bootstrap.css
@@ -4515,22 +4515,25 @@ body {
 	margin-bottom: 5px;
 }
 
-
+.rightMargin{
+	margin-right: 5px;
+}
 
 .ball {
-background-color: transparent;
-border: 5px solid rgba(0, 183, 229, 0.9);
-opacity: .9;
-border-top: 5px solid transparent;
-border-left: 5px solid transparent;
-border-radius: 50px;
-box-shadow: 0 0 35px #2187e7;
-width: 50px;
-height: 50px;
-margin: 0 auto;
--moz-animation: spin .5s infinite linear;
--webkit-animation: spin .5s infinite linear;
+	background-color: transparent;
+	border: 5px solid rgba(0, 183, 229, 0.9);
+	opacity: .9;
+	border-top: 5px solid transparent;
+	border-left: 5px solid transparent;
+	border-radius: 50px;
+	box-shadow: 0 0 35px #2187e7;
+	width: 50px;
+	height: 50px;
+	margin: 0 auto;
+	-moz-animation: spin .5s infinite linear;
+	-webkit-animation: spin .5s infinite linear;
 }
+
 .loading {
 	background-color:#333;  
     border:1px solid #333;
@@ -4590,3 +4593,5 @@ margin: 0 auto;
     min-width: 500px;
     background-color:#E6E6DD;
 }
+
+
