--- a/intranet/htdocs/intranet-tmpl/herramientas/importacion/lista_importaciones.tmpl
+++ b/intranet/htdocs/intranet-tmpl/herramientas/importacion/lista_importaciones.tmpl
@@ -70,7 +70,9 @@
 						      [% PERL %]
                                print C4::AR::Filtros::action_set_button(
 									title           => "[% 'Importaci&oacute;n' | i18n %]",
-                                    button          => 'btn btn-primary',   
+                                    button          => 'btn btn-primary',
+                                    url				=>	"[% url_prefix %]/herramientas/importacion/detalle_importacion.pl",
+                                    params 			=>   ["id_importacion=[% importacion.getId %]"],
                                     actions         => [
 										{title => "Detalle",icon=>"icon-search",url=>"[% url_prefix %]/herramientas/importacion/detalle_importacion.pl", params =>   ["id_importacion=[% importacion.getId %]"]},
                                         {title => "Editar",icon=>"icon-pencil",url=>"[% url_prefix %]/herramientas/importacion/importarDB.pl", params =>   ["tipoAccion=EDITAR", "id_importacion=[% importacion.getId %]"]},
