--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/ejemplaresDelGrupo.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/ejemplaresDelGrupo.tmpl
@@ -49,7 +49,8 @@
 						                    print C4::AR::Filtros::link_to( text => "[% nivel3_obj.getBarcode %]",
 						                                                    url=>"[% url_prefix %]/catalogacion/estructura/detalleEjemplar.pl", 
 						                                                    params =>   ["id3=[% id3 %]"],
-						                                                    title =>    "[% 'Detalle del ejemplar' | i18n %]"
+						                                                    title =>    "[% 'Detalle del ejemplar' | i18n %]",
+						                                                    tooltip => {'Detalle del ejemplar'},
 						                                                ) ;
 						                [% END %]
 						                </td>
@@ -214,6 +215,8 @@
 		                                                                    icon=>"icon-trash"
 		                                                                   },
 		                                                                   ],
+		                                                popover       => {text=>'Esta acci&oacute;n se aplica para todos los ejemplares seleccionados', 
+		                                                                  title=> 'Atenci&oacute;n'}
 		                     
 		                                                 ) ;
 		                                     [% END %]
