--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/analiticasDelGrupo.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/analiticasDelGrupo.tmpl
@@ -10,22 +10,18 @@
 		<fieldset>
 		    <legend class="trigger trigger_analiticas_[% id2 %] click">[% "Anal&iacute;ticas del grupo" | i18n %] [% id2 %]</legend>
 		    <div id="analiticasDelGrupo[% id2 %]" class="analiticasDelGrupo[% id2 %]" >
-				<ul class="listado_sin_margen"> 
-						<li></li>
                         [% FOREACH nivel1_analiticas_array %]
-                        <li>
-						<dl class="listado_sin_margen">  
+						<dl>  
                             [% FOREACH nivel1_analitica %]
                                 [% IF liblibrarian %]
                                     [% IF dato %]
-                                    <dt> [% liblibrarian %]: <strong>[% dato %]</strong></dt>
+                                         <dt class="inline left rightMargin">[% liblibrarian %]:&nbsp;</dt> 
+                                         <dd>[% dato %]&nbsp;</dd>
                                     [% END %]
                                 [% END %]
                             [% END %] <!-- END FOREACH nivel1_analitica -->
 						</dl>
-						</li>
                         [% END %]  <!-- END FOREACH nivel1_analiticas_array -->      
-                 </ul>
 		    </div> <!--end <div id="analiticasDelGrupo -->
 		</fieldset>
 		<script type="text/javascript">makeToggle('analiticasDelGrupo[% id2 %]','trigger_analiticas_[% id2 %]',null,true);</script>
